app/assets/stylesheets/theme_dark.scss
/* ... */
g#icon-116-lock-open {
    fill: #bbb;
}

.share-input:focus ~ span svg g g {
    fill: #bbb;
}

table.set-platform td {
    color: #bbb;
    border-color: #888;
    background-color: #555;

    &:last-child {
        border-color: #888;
    }

    a {
        color: #bbb;
    }

    &.btn:hover {
        background-color: #666;

        a {
            color: #ddd;
        }
    }
}

.del-user-btn:hover span #icon-61-warning {
    fill: #ccc;
}

.rng-lab, .rng-mima {
    color: #bbb;
}

#gpv-counter {
    color: #bbb;
    border-color: #aaa;
}

.rng-button.disabled, #gpv-counter.disabled {
    color: #777;
    border-color: #666;
}

table.set-email-pass {
    td {
        border-color: #888;
        background-color: #555;
    }

    td:last-child {
        border-color: #888;
    }

    .btn input {
        color: #bbb;
    }

    .btn:hover {
        background-color: #666;

        input {
            color: #ddd;
        }
    }

    .btn.disabled {
        background-color: #444;
    }

    .btn.disabled:hover input {
        color: #777;
    }

    .btn.disabled input {
        color: #777;
    }
}

.set-input {
    color: #ccc;

    &::placeholder {
        color: #888;
    }

    &:focus {
        background-color: #555;
        color: #ccc;

        ~ span svg g g {
            fill: #aaa;
        }
    }
}

.update-info {
    color: #ddd;
    background-color: #666;
}

// Graphs

.coll-name, .ch-graphs {
    color: #ddd;
}

.ch-slct {
    color: #888;
}

#graph_collection:hover ~ .ch-slct, .stats {
    color: #ccc;
}

.stats tr td:last-child, .uk-accordion {
    color: #aaa;
}

.uk-accordion-title::before {
    filter: brightness(1.7);
}

.uk-accordion {
    li.uk-open a.uk-accordion-title {
        color: #ddd;
    }

    a.uk-accordion-title:focus {
        color: #aaa;
    }
}

a.hide-labels {
    color: #bbb;
    background-color: #555;

    &:hover {
        color: #ddd;
        background-color: #666;
    }
}

// Add forms

.copy-form, .edit-form, .add-form {
    background-color: #444;
    color: #bbb;
}

.c-m {
    color: #888;

}
.chosen {
    color: #ddd;
    box-shadow: 0px 4px 0 0px #7274de;
}

.cf-name {
    color: #ddd;
}

hr.md, .wf hr.md {
    border-color: #777;
}

.wf .cf-add-button, .wf .cf-cm-button, .cf-add-button, .cf-cm-button {
    color: #888;
    border-color: #777;
    &:hover {
        color: #bbb;
        border-color: #aaa;
    }
}

.cf-collection-icon svg {
    stroke: #888 !important;
}

.cf-collection-green rect, .cf-collection-green polygon, .cf-collection-green line {
    stroke: #7f82ff;
}

.cf-platform-icon svg {
    fill: #888;
}

.cf-platform-green svg {
    fill: #7f82ff;
}

.cf-physical + svg path {
    fill: #888;
}

.cf-physical:checked + svg path {
    fill: #7f82ff;
}

.cf-digital + svg {
    fill: #888;
}

.cf-digital:checked + svg {
    fill: #7f82ff;
}

#t-ops .uk-modal-body {
    background-color: #444;
    color: #bbb;
}

.copy-form.wf, .add-form.wf, .edit-form.wf {
    background-color: #111111f0;
}

.already-in {
    color: #999;
    .title {
        color: #bbb;
    }
}

.add-form .strike > span:after, .add-form.wf .strike > span:after  {
    background-color: #666;
}

.acf-remove svg {
    stroke: #888 !important;
}

.acf-remove:hover svg path {
    stroke: #ccc;
}

// Landing Page

.frame {
    border-color: #4f4f4f;
    box-shadow: -2px -1px 20px #00000042;
    background-color: #222;
}

.fb {
    background-color: #555;
    border-color: #222222;
}

.lp-images {
    border-color: #4f4f4f;
}

.lp-top {
    color: #bbb;
}

.lp-top p, .f-title {
    border-color: #555;
    color: #aaa;
}


.lp-about span {
        background-color: #444;
        color: #bbb;
}

.feat, .f-head, .lp-about {
    color: #aaa;
}

.lp-sample path, .lp-sample rect {
    stroke: #888;
}

.lp-sample:hover path, .lp-sample:hover rect {
    stroke: #bbb;
}

.lp-play path {
    stroke: #999;
}

.lp-play:hover path {
    stroke: #ccc;
}

.login-button:hover span {
    color: #bbb;
}

.lp-overlay {
    background-color: #555;
    box-shadow: 1px 2px 6px 0 #0000003d;
    color: #ccc;
}

.lp-big, .login-button {
    border-color: #777;
    color: #999;
    &:hover {
        border-color: #999;
        color: #ccc;
        background-color: #444;
    }
}

.uk-dotnav > * > * {
    border-color: rgba(222, 222, 222, 0.4);
}

.uk-dotnav > * > :hover, .uk-dotnav > * > :focus {
    background-color: rgba(255, 255, 255, 0.6);
}

.lp-dotnav-position li.uk-active a {
    background-color: rgba(255, 255, 255, 0.4);
}

.uk-slidenav {
    color: rgb(153, 153, 153);
}

.uk-slidenav:hover, .uk-slidenav:focus {
    color: rgba(220, 220, 220, 0.9);
}

// Login and Signup form

.rem-me {
    color: #ccc;
}

.agree, .have-account {
    color: #afafaf;
}

a.uk-link-muted {
    color: #888;
    &:hover {
        color: #ccc;
    }
}

// Last changes
.g-right {
    color: #999;
}

// New things

#change-theme-lp span svg {
    fill: #888;
}

#change-theme-lp:hover svg {
    fill: #ccc;
}

